--- a/app/src/main/res/layout/fragment_mechanical_department.xml
+++ b/app/src/main/res/layout/fragment_mechanical_department.xml
@@ -85,6 +85,7 @@
                             android:layout_width="120dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:id="@+id/dn"
                             android:backgroundTint="#FB8C00"
                             android:text="View" />
 
@@ -193,7 +194,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
-                            android:text="Department Notice"
+                            android:text="Student Information"
                             android:textAlignment="center"
                             android:textAllCaps="true"
                             android:textColor="#FFFFFF"
@@ -202,6 +203,7 @@
 
                         <Button
                             android:layout_width="120dp"
+                            android:id="@+id/si"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#FB8C00"
@@ -241,6 +243,7 @@
 
                         <Button
                             android:layout_width="120dp"
+                            android:id="@+id/br"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#FB8C00"
@@ -280,6 +283,7 @@
 
                         <Button
                             android:layout_width="120dp"
+                            android:id="@+id/cr"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#FB8C00"
@@ -319,6 +323,7 @@
 
                         <Button
                             android:layout_width="120dp"
+                            android:id="@+id/sp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#FB8C00"
@@ -326,7 +331,45 @@
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/Stipend"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    app:cardBackgroundColor="#EF6C00"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="10dp"
+                    app:cardPreventCornerOverlap="false"
+                    app:cardUseCompatPadding="true">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:text="Stipend"
+                            android:textAlignment="center"
+                            android:textAllCaps="true"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <Button
+                            android:id="@+id/sd"
+                            android:layout_width="120dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:backgroundTint="#FB8C00"
+                            android:text="View" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/Syllabus"
                     android:layout_width="match_parent"
@@ -358,6 +401,7 @@
 
                         <Button
                             android:layout_width="120dp"
+                            android:id="@+id/sb"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#FB8C00"
@@ -399,6 +443,7 @@
                             android:layout_width="120dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:id="@+id/dc"
                             android:backgroundTint="#FB8C00"
                             android:text="View" />
 
