--- a/app/src/main/res/layout/activity_upload_student_session.xml
+++ b/app/src/main/res/layout/activity_upload_student_session.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:minHeight="200dp"
-    android:background="#2E7D32"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    tools:context=".uploadStudentSession">
     <LinearLayout
         android:layout_width="match_parent"
-
+        android:background="#2E7D32"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_height="match_parent">
-
         <androidx.cardview.widget.CardView
             android:id="@+id/probidan22"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            app:cardBackgroundColor="#4CAF50"
+            app:cardBackgroundColor="#2E7D32"
             app:cardCornerRadius="20dp"
             app:cardElevation="10dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true">
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -29,45 +28,46 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <EditText
 
-                    android:id="@+id/probidan_name"
+                    android:id="@+id/session"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp"
-                    android:text="প্রবিধান -২০২২"
                     android:textAlignment="center"
-                    android:textAllCaps="true"
+                    android:hint="Enter The Name Of Session"
                     android:textColor="#F1F1F1"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <EditText
 
-                    android:id="@+id/probidan_title"
+                    android:id="@+id/shift"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp"
-                    android:text="ডিপ্লোমা-ইন-ইঞ্জিনিয়ারিং শিক্ষাক্রম"
+                    android:hint="Enter The Name of Shift"
                     android:textAlignment="center"
-                    android:textAllCaps="true"
                     android:textColor="#F1F1F1"
                     android:textSize="20sp" />
+
 
                 <TextView
-
-                    android:id="@+id/probidan_des"
+                    android:id="@+id/session_submit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="২০২১-২০২২ শিক্ষাবর্ষ হতে কার্যকর"
+                    android:background="#000000"
+                    android:ems="10"
+                    android:layout_marginTop="20dp"
+                    android:padding="10dp"
+                    android:text="Done"
                     android:textAlignment="center"
                     android:textAllCaps="true"
-                    android:textColor="#F1F1F1"
-                    android:textSize="20sp" />
+                    android:textColor="#F4F3F3"
+                    android:textColorHint="#00695C"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
