--- a/app/src/main/res/layout/fragment_academic_calender.xml
+++ b/app/src/main/res/layout/fragment_academic_calender.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,57 +9,29 @@
     tools:context=".ui.academic.academic_calender">
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/academicCelender"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_Probidan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_baseline_person_add_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewProbidan"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="1"
-        app:cardBackgroundColor="#283593"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:text=" পর্ব পরিকল্পনা"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="#F1F1F1"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:text=" অক্টোবর , ২০২২ থেকে মার্চ, ২০২৩ "
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="#F1F1F1"
-                android:textSize="20sp" />
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="ডিপ্লোমা-ইন-ইঞ্জিনিয়ারিং শিক্ষাক্রম"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="#F1F1F1"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+</androidx.constraintlayout.widget.ConstraintLayout>
