--- a/app/src/main/res/layout/activity_board_result_view.xml
+++ b/app/src/main/res/layout/activity_board_result_view.xml
@@ -13,6 +13,7 @@
         android:id="@+id/add_Probidan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
