--- a/app/src/main/res/layout/activity_student_info.xml
+++ b/app/src/main/res/layout/activity_student_info.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
+        android:visibility="gone"
         android:layout_marginBottom="24dp"
         android:clickable="true"
         app:backgroundTint="#000000"
