--- a/app/src/main/res/layout/fragment_academic_calender.xml
+++ b/app/src/main/res/layout/fragment_academic_calender.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:layout_marginRight="20dp"
+        android:visibility="gone"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
