--- a/app/src/main/res/layout/fragment_admission_info.xml
+++ b/app/src/main/res/layout/fragment_admission_info.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:layout_marginBottom="20dp"
+        android:visibility="gone"
         android:layout_marginRight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
