--- a/app/src/main/res/layout/fragment_general_notice.xml
+++ b/app/src/main/res/layout/fragment_general_notice.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
