--- a/app/src/main/res/layout/fragment_offical_staff.xml
+++ b/app/src/main/res/layout/fragment_offical_staff.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        android:visibility="gone"
         android:layout_weight="1"
         android:clickable="true"
         android:src="@drawable/ic_baseline_person_add_24"
