--- a/app/src/main/res/layout/fragment_student_notice.xml
+++ b/app/src/main/res/layout/fragment_student_notice.xml
@@ -14,6 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
