--- a/app/src/main/res/layout/fragment_tender_notice.xml
+++ b/app/src/main/res/layout/fragment_tender_notice.xml
@@ -11,6 +11,7 @@
         android:id="@+id/add_Probidan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginRight="20dp"
